# viv

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  cmake.toml
cmake/cmkr/: cmkr.cmake
include/viv/: cli.h  dynamic_array.h  flag.h  gemini.h  log.h  ssl.h  ui.h  viv.h
viv/: CMakeLists.txt  cli.c  dynamic_array.c  flag.c  gemini.c  log.c  ssl.c  ui.c  viv.c
